# django-temporal-demo

./: .gitignore  Dockerfile  Dockerfile.worker  LICENSE  README.md  docker-compose.yaml  health_activities_worker.py  manage.py  pyproject.toml
.mailpit-data/: mailpit.db
health_activities/: activities.py  admin.py  apps.py  models.py  scheduler.py  services.py  workflows.py
health_activities/management/commands/: run_health_activities_worker.py
health_activities/migrations/: 0001_initial.py
health_activities/templates/admin/: trigger_processing.html
health_activities/templates/admin/health_activities/caloriespermonth/: change_list.html
health_analytics/: asgi.py  settings.py  urls.py  wsgi.py
temporal-config/dynamicconfig/: development.yaml
